--- a/manager/media/style/MODxRE2_DropdownMenu/css/tabpane.css
+++ b/manager/media/style/MODxRE2_DropdownMenu/css/tabpane.css
@@ -6,8 +6,8 @@
 .tab-row .tab.selected { z-index: 2; border-color: #ddd; background-color: #fff; color: #444; font-weight: 700 }
 .tab-row .tab .fa { margin-right: 3px; font-size: 14px }
 /**/
-.tab-row-container { height: 2.5rem; left: 0; overflow: hidden; padding: 0 1.5rem; position: relative; }
-.tab-row-container .tab-row { z-index: 2; overflow: hidden; padding: 0; white-space: nowrap }
+.tab-row-container { height: 2.5rem; left: 0; overflow-y: hidden; padding: 0 1.5rem; position: relative; }
+.tab-row-container .tab-row { z-index: 2; -webkit-overflow-scrolling: touch; overflow-x: auto; padding: 0 0 2rem; white-space: nowrap }
 .tab-row-container .tab-row::after { display: none }
 .tab-row-container > i { position: absolute; top: 0; height: 100%; text-align: center; font: normal normal normal 1.2rem/2.7rem FontAwesome; cursor: pointer; transition-duration: 0.2s; width: 1.5rem; }
 .tab-row-container > i.prev { left: 0; }
